<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/expiation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="128dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/product_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:contentDescription="@null"
        android:src="@android:drawable/ic_menu_camera" />

</RelativeLayout>