<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="96dp"
            android:layout_height="25dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/list_item_place"
            android:layout_width="96dp"
            android:layout_height="25dp"
            android:text="@string/place"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/list_item_comment"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:text="@string/comment"
        android:textAlignment="center"
        android:textSize="18sp" />

</RelativeLayout>