<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProduct">

    <TextView
        android:id="@+id/name_product_edit"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_product_edit"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:text="@string/start_amount"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/left_product_edit"
        android:layout_width="256dp"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/left"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo_product_edit"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/current_product_edit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:hint="0"
        android:inputType="numberSigned|numberDecimal"
        android:text="0"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/divider_product_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/divider_product_edit"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/divider"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/start_product_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ok_product_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ok_product_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>